<resources>
    <string name="app_name">AquaInfo</string>
    <string name="aqua_medidas">Foto medidas do aquário</string>
    <string name="aqua_logo">Logo do AquaInfo</string>
    <string name="titulo_medidas">Entre com as medidas do seu aquário:</string>
    <string name="medida_altura">Altura:</string>
    <string name="entrada_altura">Altura / cm</string>
    <string name="medida_largura">Largura:</string>
    <string name="entrada_largura">Largura / cm</string>
    <string name="medida_comprimento">Comprimento:</string>
    <string name="entrada_comprimento">Comprimento / cm</string>
    <string name="botao_calcular">Calcular</string>
    <string name="saida_litragem">Litragem do Aquário</string>
    <string name="saida_filtro">Filtro Recomendado:</string>
    <string name="saida_aquecedor">Aquecedor Recomendado:</string>
    <string name="saida_iluminacao">Iluminação Recomendada:</string>
    <string name="saida_desconto">Descontar decoração?</string>
    <string name="saida_plantas">Plantas vivas:</string>
    <string name="radio_sim">Sim</string>
    <string name="radio_nao">Não</string>
    <string name="teste">teste</string>
    <string name="saida_vazia"></string>
</resources>